deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk012-ui
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk012-ui
  template:
    metadata:
      labels:
        app: sk012-ui
    spec:
      containers:
      - name: sk012-ui
        image: amdp-registry.skala-ai.com/skala25a/sk012-ui@sha256:57faab2f85f2e21268b54a28667abc7401f96f9aa57559b46975aa657813aabc 
        ports:
        - containerPort: 80
