service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk012-ui-second-service
  namespace: skala-practice
spec:
  selector:
    app: sk012-ui-second
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
